feat: auth,register 코드들 auth로 병합./회원가입, 로그인 테스트 완료
